--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="BasicHttpAuthExample">
+<html ng-app="acura">
   <head>
     <meta charset="utf-8">
     <title>Angularjs framework</title>
